# Generative_Deep_Learning_2nd_Edition

./: README.md  pyproject.toml
notebooks/02_deeplearning/01_mlp/: mlp.ipynb
notebooks/02_deeplearning/02_cnn/: cnn.ipynb
notebooks/03_vae/01_autoencoder/: autoencoder.ipynb
notebooks/03_vae/02_vae_fashion/: vae_fashion.ipynb
notebooks/03_vae/03_vae_faces/: vae_faces.ipynb
scripts/downloaders/: download_kaggle_data.sh
