[tool.poetry]
name = "generative-deep-learning-2nd-edition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "generative_deep_learning_2nd_edition"}]

[tool.poetry.dependencies]
python = "3.9.15"
matplotlib = "3.6.3"
jupyterlab = "3.5.3"
scipy = "1.10.0"
scikit-learn = "1.2.1"
scikit-image = "0.19.3"
pandas = "1.5.3"
music21 = "8.1.0"
black = {version = "23.1.0", extras = ["jupyter"]}
click = "8.0.4"
flake8 = "5.0.4"
kaggle = "1.5.12"
pydot = "1.4.2"
ipywidgets = "8.0.4"
tensorflow-macos = "2.10.0"
tensorboard = "2.10.1"
tensorflow-probability = "0.18.0"
flake8-nb = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
